--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: "static/assets/uploads"
-public_folder: "/assets/uploads"
+media_folder: "hugo/static/assets/uploads"
+public_folder: "assets/uploads"
 
 collections:
   - name: "pages"
