--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -27,7 +27,7 @@ collections:
           {label: "Name", name: "name", widget: "string"},
           {label: "Age", name: "age", widget: "string"},
           {label: "Help received", name: "help", widget: "string"},
-          {label: "Body", name: "content", widget: "markdown"}
+          {label: "Body", name: "body", widget: "markdown"}
         ]}
       - {label: "Real change", name: "realchange", widget: "object", fields: [
           {label: "Heading", name: "heading", widget: "string"},
