--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     label: "Stories"
     folder: "hugo/content/stories"
     create: true
+    filter: {field: "type", value: "story"}
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
