Adds showonhome for Stories to hide on Home page unless set

--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -130,6 +130,7 @@ collections:
         name: "stories"
         fields:
           - {label: "Title", name: "title", widget: "string"}
+          - {label: "Show on Home", name: "showonhome", widget: "boolean", default: false}
           - {label: "Header", name: "header", widget: "object", fields: [
               {label: "Background (optional)", name: "background", widget: "image"},
               {label: "Header Text (optional)", name: "hero", widget: "markdown"}
