--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-gb"
 title = "Real Change Wigan & Leigh"
-disableKinds = ["RSS"]
+disableKinds = ["RSS", "taxonomyTerm"]
 [blackfriday]
    hrefTargetBlank = true
