--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -18,6 +18,7 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Header", name: "header", widget: "object", fields: [
               {label: "Background (optional)", name: "background", widget: "image"},
+              {label: "Classes", name: "classes", widget: "hidden", default: "home-header"},
               {label: "Header Text (optional)", name: "hero", widget: "markdown"}
             ]}
           - {label: "What Is", name: "whatis", widget: "object", fields: [
