--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -113,6 +113,21 @@ collections:
               {label: "Heading", name: "heading", widget: "string"},
               {label: "body", name: "body", widget: "markdown"}
             ]}
+      - file: "hugo/content/get-involved/_index.md"
+        label: "Get Involved"
+        name: "get-involved"
+        fields:
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Header", name: "header", widget: "object", fields: [
+              {label: "Background (optional)", name: "background", widget: "image"},
+              {label: "Header Text (optional)", name: "hero", widget: "markdown"}
+            ]}
+          - {label: "Body", name: "content", widget: "markdown"}
+          - {label: "Section", name: "section", widget: "object", fields: [
+              {label: "Heading", name: "heading", widget: "string"},
+              {label: "Body", name: "body", widget: "markdown"},
+              {label: "Image", name: "image", widget: "image"}
+            ]}
       - file: "hugo/content/privacy/_index.md"
         label: "Privacy Policy"
         name: "privacy"
@@ -125,7 +140,7 @@ collections:
           - {label: "Body", name: "content", widget: "markdown"}
           - {label: "Partners", name: "partners", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: "string"},
-              {label: "body", name: "body", widget: "markdown"}
+              {label: "Body", name: "body", widget: "markdown"}
             ]}
       - file: "hugo/content/stories/_index.md"
         label: "Stories"
