--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -64,6 +64,7 @@ collections:
           - {label: "Where", name: "where", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: "string"},
               {label: "Body", name: "body", widget: "markdown"},
+              {label: "Image", name: "image", widget: "image"},
               {label: "Stat 1", name: "stat1", widget: "object", fields: [
                 {label: "Image", name: "image", widget: "image"},
                 {label: "Count", name: "count", widget: "string"},
