--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -54,9 +54,16 @@ collections:
         label: "How it Works"
         name: "how-it-works"
         fields:
-          - {label: "Header", name: "header", widget: "object", fields: [
-              {label: "Header Text (optional)", name: "hero", widget: "markdown"}
           - {label: "Title (Real Help Doncaster prepended)", name: "title", widget: "string"}
+          - {label: "Hero", name: "hero", widget: "object", fields: [
+              {label: "Pretitle (optional - white text above title)", name: "pretitle", widget: "string"},
+              {label: "Title (optional - yellow)", name: "title", widget: "string"},
+              {label: "Subtitle (optional - white text below title)", name: "subtitle", widget: "string"},
+              {label: "Body (optional)", name: "body", widget: "markdown"},
+              {label: "Button", name: "button", widget: "object", fields: [
+                {label: "URL (inc. http://)", name: "url", widget: "string"},
+                {label: "Text", name: "text", widget: "string"}
+              ]}
             ]}
           - {label: "Intro", name: "intro", widget: "object", fields: [
               {label: "Body", name: "body", widget: "markdown"},
@@ -108,8 +115,15 @@ collections:
         name: "how-to-apply"
         fields:
           - {label: "Title (Real Help Doncaster prepended)", name: "title", widget: "string"}
-          - {label: "Header", name: "header", widget: "object", fields: [
-              {label: "Header Text (optional)", name: "hero", widget: "markdown"}
+          - {label: "Hero", name: "hero", widget: "object", fields: [
+              {label: "Pretitle (optional - white text above title)", name: "pretitle", widget: "string"},
+              {label: "Title (optional - yellow)", name: "title", widget: "string"},
+              {label: "Subtitle (optional - white text below title)", name: "subtitle", widget: "string"},
+              {label: "Body (optional)", name: "body", widget: "markdown"},
+              {label: "Button", name: "button", widget: "object", fields: [
+                {label: "URL (inc. http://)", name: "url", widget: "string"},
+                {label: "Text", name: "text", widget: "string"}
+              ]}
             ]}
           - {label: "Body", name: "content", widget: "markdown"}
           - {label: "List", name: "list", widget: "markdown"}
@@ -122,8 +136,15 @@ collections:
         name: "get-involved"
         fields:
           - {label: "Title (Real Help Doncaster prepended)", name: "title", widget: "string"}
-          - {label: "Header", name: "header", widget: "object", fields: [
-              {label: "Header Text (optional)", name: "hero", widget: "markdown"}
+          - {label: "Hero", name: "hero", widget: "object", fields: [
+              {label: "Pretitle (optional - white text above title)", name: "pretitle", widget: "string"},
+              {label: "Title (optional - yellow)", name: "title", widget: "string"},
+              {label: "Subtitle (optional - white text below title)", name: "subtitle", widget: "string"},
+              {label: "Body (optional)", name: "body", widget: "markdown"},
+              {label: "Button", name: "button", widget: "object", fields: [
+                {label: "URL (inc. http://)", name: "url", widget: "string"},
+                {label: "Text", name: "text", widget: "string"}
+              ]}
             ]}
           - {label: "Body", name: "content", widget: "markdown"}
           - {label: "Section", name: "section", widget: "object", fields: [
@@ -136,8 +157,15 @@ collections:
         name: "privacy"
         fields:
           - {label: "Title (Real Help Doncaster prepended)", name: "title", widget: "string"}
-          - {label: "Header", name: "header", widget: "object", fields: [
-              {label: "Header Text (optional)", name: "hero", widget: "markdown"}
+          - {label: "Hero", name: "hero", widget: "object", fields: [
+              {label: "Pretitle (optional - white text above title)", name: "pretitle", widget: "string"},
+              {label: "Title (optional - yellow)", name: "title", widget: "string"},
+              {label: "Subtitle (optional - white text below title)", name: "subtitle", widget: "string"},
+              {label: "Body (optional)", name: "body", widget: "markdown"},
+              {label: "Button", name: "button", widget: "object", fields: [
+                {label: "URL (inc. http://)", name: "url", widget: "string"},
+                {label: "Text", name: "text", widget: "string"}
+              ]}
             ]}
           - {label: "Body", name: "content", widget: "markdown"}
           - {label: "Partners", name: "partners", widget: "object", fields: [
@@ -150,8 +178,15 @@ collections:
         fields:
           - {label: "Title (Real Help Doncaster prepended)", name: "title", widget: "string"}
           - {label: "Show on Home", name: "showonhome", widget: "boolean", default: false}
-          - {label: "Header", name: "header", widget: "object", fields: [
-              {label: "Header Text (optional)", name: "hero", widget: "markdown"}
+          - {label: "Hero", name: "hero", widget: "object", fields: [
+              {label: "Pretitle (optional - white text above title)", name: "pretitle", widget: "string"},
+              {label: "Title (optional - yellow)", name: "title", widget: "string"},
+              {label: "Subtitle (optional - white text below title)", name: "subtitle", widget: "string"},
+              {label: "Body (optional)", name: "body", widget: "markdown"},
+              {label: "Button", name: "button", widget: "object", fields: [
+                {label: "URL (inc. http://)", name: "url", widget: "string"},
+                {label: "Text", name: "text", widget: "string"}
+              ]}
             ]}
           - {label: "Intro", name: "intro", widget: "markdown"}
           - {label: "Heading", name: "heading", widget: "text"}
@@ -170,8 +205,15 @@ collections:
       - {label: "Story", name: "story", widget: "hidden", default: "yes"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Header", name: "header", widget: "object", fields: [
-          {label: "Header Text (optional)", name: "hero", widget: "markdown"}
+      - {label: "Hero", name: "hero", widget: "object", fields: [
+          {label: "Pretitle (optional - white text above title)", name: "pretitle", widget: "string"},
+          {label: "Title (optional - yellow)", name: "title", widget: "string"},
+          {label: "Subtitle (optional - white text below title)", name: "subtitle", widget: "string"},
+          {label: "Body (optional)", name: "body", widget: "markdown"},
+          {label: "Button", name: "button", widget: "object", fields: [
+            {label: "URL (inc. http://)", name: "url", widget: "string"},
+            {label: "Text", name: "text", widget: "string"}
+          ]}
         ]}
       - {label: "Summary (Card on Home and Stories)", name: "summary", widget: "object", fields: [
           {label: "Image (Aspect 5by2)", name: "image", widget: "image"},
