--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -175,6 +175,7 @@ collections:
       - file: "hugo/content/stories/_index.md"
         label: "Stories"
         name: "stories"
+        disabled: true
         fields:
           - {label: "Title (Real Help Doncaster prepended)", name: "title", widget: "string"}
           - {label: "Show on Home", name: "showonhome", widget: "boolean", default: false}
@@ -195,6 +196,7 @@ collections:
               {label: "Text", name: "text", widget: "string"}
             ]}
   - name: "stories"
+    disabled: true
     label: "Story"
     editor:
       preview: false
