Update Share add Open Graph and Add Live URL to hugo config

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://realchangewiganandleigh.co.uk/"
 languageCode = "en-gb"
 title = "Real Change Wigan & Leigh"
 disableKinds = ["RSS", "taxonomyTerm"]
