--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -175,12 +175,12 @@ collections:
           {label: "Header Text (optional)", name: "hero", widget: "markdown"}
         ]}
       - {label: "Summary (Card on Home and Stories)", name: "summary", widget: "object", fields: [
-          {label: "Image (Aspect 5by2)", name: "image", widget: "image"},
+          {label: "Image (Aspect 5by2 - 540px by 216px)", name: "image", widget: "image"},
           {label: "Heading", name: "heading", widget: "string"},
           {label: "Text", name: "text", widget: "string"}
         ]}
       - {label: "Content", name: "content", widget: "object", fields: [
-          {label: "Image (Aspect 4by3)", name: "image", widget: "image"},
+          {label: "Image (Aspect 4by3 - 640px by 480px)", name: "image", widget: "image"},
           {label: "Name", name: "name", widget: "string"},
           {label: "Age", name: "age", widget: "string"},
           {label: "Help received", name: "help", widget: "string"},
