--- a/hugo/static/admin/config.yml
+++ b/hugo/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: rochdale
+  branch: oldham
 
 media_folder: "hugo/static/assets/uploads"
 public_folder: "assets/uploads"
